gears/system/event-broker/event-broker-sdk/tests/trybuild/producer/db_rejects_direct_dedup.rs
use event_broker_sdk::{DbProducer, DirectDeduplication};

fn main() {
    let _ = DbProducer::builder().deduplication(DirectDeduplication::stateless());
}
